--- a/web/templates/page/not_logged_in.html.eex
+++ b/web/templates/page/not_logged_in.html.eex
@@ -1,6 +1,8 @@
-<h1 class="page-header">Dashboard</h1>
+<h1 class="page-header">
+  Dashboard
+</h1>
 
 <div class="jumbotron">
-  <h2><%= gettext "Welcome to %{name}", name: "Phoenix!" %></h2>
-  <p class="lead">A productive web framework that<br />does not compromise speed and maintainability.</p>
+  <a href="<%= session_path(@conn, :new) %>" class="btn btn-lg btn-primary">Login</a>
+  <a href="<%= registration_path(@conn, :new) %>" class="btn btn-lg btn-danger">Register</a>
 </div>
