--- a/web/templates/registration/new.html.eex
+++ b/web/templates/registration/new.html.eex
@@ -23,6 +23,7 @@
   </div>
 
   <div class="form-group">
-    <%= submit "Signup", class: "btn btn-primary" %>
+    <%= submit "Signup", class: "btn btn-primary" %> or
+    <a href="<%= session_path(@conn, :new) %>" class="btn btn-lg btn-danger">Login</a>
   </div>
 <% end %>
