--- a/web/templates/session/new.html.eex
+++ b/web/templates/session/new.html.eex
@@ -1,5 +1,3 @@
-<h2>Login</h2>
-
 <%= form_for @conn, session_path(@conn, :create), [name: :session], fn f -> %>
   <div class="form-group">
     <label>Email</label>
@@ -12,6 +10,7 @@
   </div>
 
   <div class="form-group">
-    <%= submit "Login", class: "btn btn-primary" %>
+    <%= submit "Login", class: "btn btn-primary" %> or
+    <a href="<%= registration_path(@conn, :new) %>" class="btn btn-lg btn-danger">Register</a>
   </div>
 <% end %>
