--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -25,59 +25,8 @@
 
   <body>
 
-    <%= if logged_in?(@conn) do %>
-      <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container-fluid">
-          <div class="navbar-header">
-
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-
-            <a class="navbar-brand" href="/">StatsViewer</a>
-          </div>
-
-          <div id="navbar" class="navbar-collapse collapse">
-
-            <ul class="nav navbar-nav navbar-right">
-              <li><a href="#">Dashboard</a></li>
-              <li><a href="#">Settings</a></li>
-              <li><a href="#">Profile</a></li>
-              <li><a href="<%= session_path(@conn, :delete) %>">Logout</a></li>
-            </ul>
-
-            <form class="navbar-form navbar-right">
-              <input type="text" class="form-control" placeholder="Search...">
-            </form>
-          </div>
-
-        </div>
-      </nav>
-
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-sm-3 col-md-2 sidebar">
-            <ul class="nav nav-sidebar">
-              <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
-            </ul>
-            <ul class="nav nav-sidebar">
-              <li><a href="">Nav item</a></li>
-            </ul>
-            <ul class="nav nav-sidebar">
-              <li><a href="">Nav item again</a></li>
-            </ul>
-          </div>
-          <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <%= render @view_module, @view_template, assigns %>
-          </div>
-        </div>
-      </div>
-    <% else %>
-      <%= render @v, @a, assigns %>
-    <% end %>
+    <div id="root">
+    </div>
 
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
   </body>
